<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383b50"
    tools:context=".UiClass.kullanicikontrol">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/AnaCerceveLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <LinearLayout
                android:id="@+id/SeceneklerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/DogrulamaSeceneklerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="#323448"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/options"
                        android:textColor="#ecf0f1"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/secenekbutonlar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/google"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:text="@string/GOOGLE" />


                        <Button
                            android:id="@+id/diger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:text="@string/OTHER" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/GoogleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/GoogleSifreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="#323448"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/E_MAIL_ADDRESS"
                        android:textColor="#ecf0f1"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/maillistesi"
                        android:layout_width="match_parent"
                        android:backgroundTint="#ecf0f1"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GoogleButononay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/googlekodmevcut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/code_available" />


                    <Button
                        android:id="@+id/googlekontrolileri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/ok" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/AnaLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/AnaSifreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="#323448"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/E_MAIL_ADDRESS"
                        android:textColor="#ecf0f1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:theme="@android:style/Theme.Holo" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Butononay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/kodmevcut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="@string/code_available" />


                    <Button
                        android:id="@+id/kontrolileri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/send_code" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
