<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383b50"
    tools:context="net.gulernet.app.nxfolder.UiClass.kullanicidogrulama">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/AnaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/AnaSifreLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="#323448"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code"
                    android:textColor="#ecf0f1"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/kod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/code"
                    android:inputType="number"
                    android:theme="@android:style/Theme.Holo" />


            </LinearLayout>





            <Button
                android:id="@+id/kontrolileri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/next" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
