<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383b50"
    tools:context="net.gulernet.app.nxfolder.UiClass.pingiris">

    <LinearLayout
        android:id="@+id/AnaLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/AnaSifreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PİN"
                android:textColor="#ecf0f1"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/pinLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint=""
                    android:inputType="numberPassword"
                    android:theme="@android:style/Theme.Holo" />

                <Button
                    android:id="@+id/pinbtn"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:width="200dp"
                    android:text="@string/ok" />
            </LinearLayout>

            <TextView
                android:id="@+id/kayippin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:text="@string/FORGOT_THE_PIN"
                android:textColor="#ecf0f1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/parmakizilayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/parmakizi" />
            <TextView
                android:id="@+id/kayippin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:visibility="gone"
                android:text="@string/FORGOT_THE_PIN"
                android:textColor="#ecf0f1" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
